[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hatch-template" # Change me
dynamic = ["version"]
description = ''
requires-python = ">=3.8"
authors = [
  { name = "Brad Hermens", email = "brad.hermens@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[tool.hatch.version]
path = "src/hatch_template/__about__.py"

[tool.hatch.envs.default]
path = ".venvs/default"

[tool.hatch.envs.types]
path = ".venvs/types"
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/hatch_template tests}"

[tool.coverage.run]
source_pkgs = ["hatch_template", "tests"]
branch = true
parallel = true
omit = [
  "src/hatch_template/__about__.py",
]

[tool.coverage.paths]
hatch_template = ["src/hatch_template", "*/hatch-template/src/hatch_template"]
tests = ["tests", "*/hatch-template/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
strict = true
